# market-data

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.claude  Dockerfile.gemini  LICENSE  README.md  TODO.md  alpha_vantage_main.py  alpha_vantage_tickers_main.py  bashrc.additions  candle_fetcher.py  context.py  docker-claude-compose.yml  docker-gemini-compose.yml  download_cboe_csv.py  main.py  oclh.py  polygon_main.py  provider.py  pyproject.toml  strategy_polygon_main.py  yahoo_main.py  yahoo_tickers_main.py
providers/: alpha_vantage.py  interface.py  polygon.py  yfinance.py
src/market_data/: factory.py  interfaces.py  main.py  models.py  provider.py
src/market_data/providers/: alpha_vantage.py  cboe.py  interface.py  polygon.py  sec.py  yfinance.py
src/market_data/utils/: parsers.py  savers.py
src/tickers/: main.py  models.py  provider.py
src/tickers/providers/: alpha_vantage.py  interface.py  polygon.py  yfinance.py
strategies/: base.py  candle_base.py  polygon.py  polygon_candles.py  yahoo_finance.py
utils/: savers.py
